Mi hermano del alma

--- a/Pizzeria.html
+++ b/Pizzeria.html
@@ -130,7 +130,7 @@
               </div>
               <div class="text-container">
                 <h2><strong>Sabias que .... ?</strong></h2>
-                <p>Es el alimento más consumido en todo el mundo. La pizza que hoy en día conocemos fue inventada en Italia y a lo largo de los años han ido surgiendo diferentes versiones según el país donde la comas. Aún así, sigue siendo el alimento preferido por la humanidad.</p>
+                <p>Que contamos con uno de los mejores servicios a domicilio, con un retraso mayor a 30 minutos el pedido es totalmente gratis!</p>
               </div>
             </div>
         </div>
